<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradiant_background"
    tools:context=".GameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/appName"
        android:textColor="@color/orange"
        android:textSize="45sp"
        android:layout_gravity="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/game_status_text"
        android:gravity="center"
        android:textSize="32sp"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/appBegin"
        android:letterSpacing="0.04"
        android:textColor="@color/green"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:columnCount="3"
        >

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="60sp"
            android:tag="0"
            android:id="@+id/btn_0"
            android:text="☀"
            />

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="60sp"
            android:tag="1"
            android:id="@+id/btn_1"
            android:text="☀"
            />

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="60sp"
            android:tag="2"
            android:id="@+id/btn_2"
            android:text="☀"
            />

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="60sp"
            android:tag="3"
            android:id="@+id/btn_3"
            android:text="☀"
            />

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="60sp"
            android:tag="4"
            android:id="@+id/btn_4"
            android:text="☀"
            />

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="60sp"
            android:tag="5"
            android:id="@+id/btn_5"
            android:text="☀"
            />

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="60sp"
            android:tag="6"
            android:id="@+id/btn_6"
            android:text="☀"
            />

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="60sp"
            android:tag="7"
            android:id="@+id/btn_7"
            android:text="☀"/>

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="60sp"
            android:tag="8"
            android:id="@+id/btn_8"
            android:text="🌈"/>

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/StartGame"
        android:id="@+id/start_game_btn"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/text_player1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Player-1 Score"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_player2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_player1"
            android:text="Player-2 Score"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/score_Player1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_Player2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/score_Player1"
            android:text="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>